--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>My Portfolio</h2>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="About.html">About</a>
         <a href="skills.html">Skills</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -42,3 +42,4 @@
 
 </body>
 </html>
+
