--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <h2>Contact Me</h2>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="About.html">About</a>
         <a href="skills.html">Skills</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -39,4 +39,5 @@
 </footer>
 
 </body>
+
 </html>
