--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
     <h2>My Skills</h2>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="About.html">About</a>
         <a href="skills.html">Skills</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -34,4 +34,5 @@
 </footer>
 
 </body>
+
 </html>
